--- a/index.html
+++ b/index.html
@@ -3,7 +3,43 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Navbar & Hero Section</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- Navbar Section -->
+    <div class="navbar-container">
+      <div class="navbar">
+        <a href="#home">Home</a>
+        <a href="#journey" class="active">Journey</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#class">Class</a>
+        <a href="#contact">Contact</a>
+      </div>
+    </div>
+
+    <!-- Hero Section -->
+    <header class="hero">
+      <div class="hero-content">
+        <div class="text-content">
+          <div class="intro">
+            <span class="badge">Meet Mareta 👋</span>
+          </div>
+          <h1>Design, Develop, Inspire</h1>
+          <p>
+            Breathing life into designs, transforming magic into code, and
+            making a positive impact. ✨
+          </p>
+        </div>
+        <div class="image-content">
+          <img
+            src="profile.jpg"
+            alt="Profile of Mareta"
+            class="profile-picture"
+          />
+          <div class="wave-icon">👋</div>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
