--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navbar & Hero Section</title>
+    <title>Navbar, Hero & My Work</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -41,5 +41,87 @@
         </div>
       </div>
     </header>
+    <!--Journey section-->
+    <section class="journey">
+      <div class="journey-content">
+        <div class="journey-image">
+          <img src="path-to-your-image.jpg" alt="Journey Image" />
+          <div class="tags">
+            <span class="tag yellow">Frontend Engineer</span>
+            <span class="tag purple">UI/UX Designer</span>
+            <span class="tag orange">Developer Advocate</span>
+          </div>
+        </div>
+        <div class="journey-text">
+          <h2>My Exciting Journey 🤓</h2>
+          <p>
+            Fueled by an insatiable curiosity and a love for learning, my
+            journey started with building landing pages using HTML, CSS & JS,
+            followed by crafting user experiences in <b>UI/UX Design</b>.
+          </p>
+          <p>
+            Now, I thrive as a <b>Software Engineer</b> specializing in frontend
+            development. Alongside, I share my expertise and experiences as a
+            <b>Tech Content Creator</b>.
+          </p>
+          <div class="stats">
+            <div class="stat">
+              <h3>28K+</h3>
+              <p>TikTok</p>
+            </div>
+            <div class="stat">
+              <h3>15K+</h3>
+              <p>Instagram</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- My Work Section -->
+    <section class="my-work">
+      <h2>My Work</h2>
+      <div class="work-cards">
+        <!-- Work Card 1 -->
+        <div class="work-card">
+          <div class="work-image" style="background-color: #e3dafa">
+            <img src="ui-ux.png" alt="UI/UX Illustration" />
+          </div>
+          <h3>UI/UX</h3>
+          <p>
+            Transforming ideas into visually stunning interfaces. Elevating user
+            experiences through intuitive designs that captivate.
+          </p>
+          <button class="view-more">View more</button>
+        </div>
+        <!-- Work Card 2 -->
+        <div class="work-card">
+          <div class="work-image" style="background-color: #d1f8d8">
+            <img src="frontend.png" alt="Frontend Illustration" />
+          </div>
+          <h3>Frontend</h3>
+          <p>
+            Crafting smooth, responsive web experiences and adherence to best
+            practices for search visibility.
+          </p>
+          <button class="view-more">View more</button>
+        </div>
+        <!-- Work Card 3 -->
+        <div class="work-card">
+          <div class="work-image" style="background-color: #fef4d1">
+            <img
+              src="content-creation.png"
+              alt="Content Creation Illustration"
+            />
+          </div>
+          <h3>Content Creation</h3>
+          <p>
+            Demystifying tech through engaging storytelling. Creating content
+            that educates and inspires.
+          </p>
+          <button class="view-more">View more</button>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
